Bug 498508 - Reloading systemd user units crashes Plasma
Summary: Reloading systemd user units crashes Plasma
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Session Management (other bugs)
Version First Reported In: git-stable-Plasma/6.3
Platform: Other Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-10 21:54 UTC by Antonio Rojas
Modified: 2025-01-11 09:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2025-01-10 21:54:57 UTC
In Plasma 6.3 beta, reloading systemd user units makes Plasma crash (or rather exit, there is no coredump)

$ systemctl reload user@1000.service
→ crash

Bisected to https://invent.kde.org/plasma/plasma-workspace/-/commit/e2cc02b75eec6b69a92a5469b4e8611d3957ef62
Comment 1 Bug Janitor Service 2025-01-10 22:47:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5053
Comment 2 uncognic 2025-01-11 01:27:02 UTC
Having this issue, can reproduce.
Comment 3 Antonio Rojas 2025-01-11 09:07:43 UTC
Git commit 52ca559077bd494af206d2e38c3d5fdc4d92fc63 by Antonio Rojas.
Committed on 11/01/2025 at 09:07.
Pushed by arojas into branch 'master'.

Fix broken ksmserver sanity check

Fix broken ksmserver sanity check

The ICE-unix check expects 'path' to be set to '/tmp', which is no longer true after e2cc02b75eec6b69a92a5469b4e8611d3957ef62
Related: bug 498491

M  +2    -2    ksmserver/main.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/52ca559077bd494af206d2e38c3d5fdc4d92fc63
Comment 4 Antonio Rojas 2025-01-11 09:30:43 UTC
Git commit d91025d35640cbaacce328d3c84bd66d6f3a9a69 by Antonio Rojas.
Committed on 11/01/2025 at 09:09.
Pushed by arojas into branch 'Plasma/6.3'.

Fix broken ksmserver sanity check

Fix broken ksmserver sanity check

The ICE-unix check expects 'path' to be set to '/tmp', which is no longer true after e2cc02b75eec6b69a92a5469b4e8611d3957ef62
Related: bug 498491


(cherry picked from commit 52ca559077bd494af206d2e38c3d5fdc4d92fc63)

a2140fea Fix broken ksmserver sanity check

Co-authored-by: Antonio Rojas <arojas@archlinux.org>

M  +2    -2    ksmserver/main.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d91025d35640cbaacce328d3c84bd66d6f3a9a69