Fix broken ksmserver sanity check

Fix broken ksmserver sanity check

The ICE-unix check expects 'path' to be set to '/tmp', which is no longer true after e2cc02b75eec6b69a92a5469b4e8611d3957ef62

BUG: 498508
BUG: 498491


(cherry picked from commit 52ca559077bd494af206d2e38c3d5fdc4d92fc63)

a2140fea Fix broken ksmserver sanity check

Co-authored-by: Antonio Rojas <arojas@archlinux.org>